Added hashtag websocket

--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Typesafe Activator template</title>
+    <title>Akka HTTP to Persistent Actor to Akka Stream to Websocket</title>
 </head>
 <body>
 <div>
