--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Free Bootstrap Timeline Example BY BINARY THEME</title>
+    <title>Ordina Tweetstream</title>
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
  <!-- Fontawesome core CSS -->
