fixed paths for resources and websockets

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -57,15 +57,14 @@
                 </div>
                 <div class="form-group">
                     <label for="tweet">Tweet:</label>
-                    <textarea id="tweet" class="form-control"></textarea>
+                    <input type="text" class="form-control" id="tweet">
                 </div>
-                <button id="submit" type="submit" class="btn btn-default">Tweet!</button>
+                <button id="submit" type="submit" class="btn btn-default pull-right">Tweet!</button>
             </form>
         </div>
     </div>
     <div class="row ">
-
-        <div class="col-md-offset-2 col-md-8 col-sm-12 top-margin">
+        <div class="col-md-offset-2 col-md-8 col-sm-12">
             <div>
                 <ul class="timeline" id="tweets">
                     <li class="time-label">
