Added test for user flow, more text in the tutorial

--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -7,7 +7,7 @@
     <h2>Getting started with this template</h2>
 
     <p>
-        In this template you will learn the basics of
+        In this template you will learn some basics of
         <strong>
             <ul>
                 <li>Akka Http</li>
@@ -18,10 +18,10 @@
         </strong>
     </p>
     <p>
-        This template consists of two parts, a theoretical and a hands-on part. In the theoretical part you will learn
-        about the techniques mentioned above by means of a fully working example. In the hands-on part you will
-        test-drive
-        your own flow.
+        This template consists of two parts, a theoretical and a hands-on part. 
+        In the theoretical part you will learn about the techniques mentioned above by means of a fully working example. 
+        In the hands-on part you will test-drive your own flow. 
+        So don't mind the failing <a href="#test">tests</a> for now, you will fix them soon enough ;)
     </p>
 </div>
 
@@ -211,6 +211,23 @@
         Now we have explained all the pieces it's time to <a href="#run/system">Run the App</a><br>
         In the next part we will extend the application with a flow containing tweet with a certain hashtag.
   </p>
+</div>
+<div>
+    <h2>Part 2: Your Goal</h2>
+    <p>
+         <h3>Implementing a websocket for hashtags</h3>
+         Tweets for a user a pretty cool, but having a diffirent channel for hashtags would be even more awesome!<br>
+         In this part we will, step by step, create this feature for the application. <br>
+         Each step will have an unimplemented method and some failing test to help you. <br>
+         This way we can explain some ways to test along the way.<br><br>
+         <img src="tutorial/img/ready-set-go.jpg" alt="Go!">
+    </p>
+</div>
+<div>
+    <h2>Part 2: Create a new source</h2>
+    <p>
+         <h3>We need a source of all tweets with a certain hashtag</h3>
+    </p>
 </div>
 <div>
     <h2>Summary</h2>
