--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -18,15 +18,18 @@
         </strong>
     </p>
     <p>
-        This template consists of two parts, a theoretical and a hands-on part. 
-        In the theoretical part you will learn about the techniques mentioned above by means of a fully working example. 
-        In the hands-on part you will test-drive your own flow. 
+        This template consists of two parts, a theoretical and a hands-on part.
+        In the theoretical part you will learn about the techniques mentioned above by means of a fully working example.
+        In the hands-on part you will test-drive your own flow.
         So don't mind the failing <a href="#test">tests</a> for now, you will fix them soon enough ;)
+    </p>
+    <p>
+        Next: <a href="#tutorial/1" class="shortcut">An Overview</a>
     </p>
 </div>
 
 <div>
-    <h2>Part 1: An overview</h2>
+    <h2>Part 1: An Overview</h2>
 
     <p>
         In this tutorial we will use a simple Twitter like application to demonstrate the different techniques. You can
@@ -45,9 +48,11 @@
     </p>
 
     <h3>Streaming tweets via Websockets</h3>
+
     <p>
         On the other side an actor is subscribed to the event bus. This means the actor will be notified every time a
-        new tweet is put on the event bus. Since <strong>Akka</strong> implements the <a href="http://www.reactive-streams.org/announce-1.0.0">
+        new tweet is put on the event bus. Since <strong>Akka</strong> implements the <a
+            href="http://www.reactive-streams.org/announce-1.0.0">
         Reactive Streams</a> SPI we can turn the actor into a <strong>Publisher</strong> which we can then turn into a
         <strong>Source</strong> so we can use it in an <strong>Akka Http Flow</strong>.
     </p>
@@ -55,27 +60,36 @@
     <h3>The same story but now in a nice diagram</h3>
     <img src="tutorial/img/flow.png" alt="The complete flow from posting a tweet to it being pushed on the websocket">
     <caption>The complete flow from posting a tweet to it being pushed on the websocket</caption>
+    <p>
+        Next: <a href="#tutorial/2" class="shortcut">Posting a Tweet</a>
+    </p>
 </div>
 
 <div>
-    <h2>Part 1: Posting a tweet</h2>
+    <h2>Part 1: Posting a Tweet</h2>
+
     <p>
         We start in <a href="#code/src/main/scala/reactive/Main.scala" class="shortcut">Main.scala</a> which defines the
         routes. The route (in this case a REST endpoint) for posting a tweet is defined in the following method:
 
-        <pre><code>   def addTweet = {
-        post {
-            entity(as[Tweet]) { tweet =>
-                complete {
-                    (system.actorOf(TweetPublisherActorManager.props) ? tweet).map(_ => StatusCodes.NoContent)
-                }
-            }
-        }
-    }</code></pre>
+<pre><code>def addTweet = {
+  post {
+    entity(as[Tweet]) { tweet =>
+      complete {
+        (system.actorOf(TweetActorManager.props) ? tweet).map(_ => StatusCodes.NoContent)
+      }
+    }
+  }
+}</code></pre>
 
-    The interesting part resides within the <code>complete</code> directive. There we create an actor (<code>TweetPublisherActorManager</code>)
+    The interesting part resides within the <code>complete</code> directive. There we create an actor (<a
+        href="#code/src/main/scala/reactive/tweets/incoming/TweetActorManager.scala"
+        class="shortcut">TweetActorManager</a>)
     and send it the tweet. For simplicity we ignore failure and transform a successful completion to an appropriate
     HTTP status code.
+    </p>
+    <p>
+        Next: <a href="#tutorial/3" class="shortcut">Using Akka Persistence</a>
     </p>
 </div>
 
@@ -83,30 +97,34 @@
     <h2>Part 1: Using Akka Persistence</h2>
 
     <h3>Forwarding tweets to persistent actors</h3>
+
     <p>
-        All posted tweets end up at the <a href="#code/src/main/scala/reactive/tweets/incoming/TweetPublisherActorManager.scala" class="shortcut">TweetPublisherActorManager</a>.
+        All posted tweets end up at the <a href="#code/src/main/scala/reactive/tweets/incoming/TweetActorManager.scala"
+                                           class="shortcut">TweetActorManager</a>.
         This actor forwards the tweet to a persistent actor based on the user that posted the tweet. Because we
         want to keep track of the last tweets of a user we associate each user with a dedicated persistent actor.
-        The job of the <a href="#code/src/main/scala/reactive/tweets/incoming/TweetPublisherActorManager.scala" class="shortcut">TweetPublisherActorManager</a>
+        The job of the <a href="#code/src/main/scala/reactive/tweets/incoming/TweetActorManager.scala" class="shortcut">TweetActorManager</a>
         is to ensure the tweets end up at the correct persistent actor.
     </p>
 
     <h3>Persisting and recovering tweets</h3>
+
     <p>
-        It is the job of the <a href="#code/src/main/scala/reactive/tweets/incoming/TweetPublisherActor.scala" class="shortcut">TweetPublisherActor</a>
-        to persist the tweet and put it on the event bus. It also knows how to recover the tweets for a user after a system failure.
+        It is the job of the <a href="#code/src/main/scala/reactive/tweets/incoming/TweetActor.scala" class="shortcut">TweetActor</a>
+        to persist the tweet and put it on the event bus. It also knows how to recover the tweets for a user after a
+        system failure.
 
-        <pre><code>case tweet: Tweet =>
-    persist(tweet) { event =>
-        sender() ! Status.Success
-        context.system.eventStream.publish(tweet)
-    }</code></pre>
+<pre><code>case tweet: Tweet =>
+  persist(tweet) { event =>
+    sender() ! Status.Success
+    context.system.eventStream.publish(tweet)
+  }</code></pre>
 
-        After successful storage the callback is triggered. We send out a <code>Success</code> message and publish the tweet
-        on the event bus.
+    After successful storage the callback is triggered. We send out a <code>Success</code> message and publish the tweet
+    on the event bus.
     </p>
     <p>
-        Next: <a href="#tutorial/4" class="shortcut">The other side of the coin: reacting to a posted tweet</a>
+        Next: <a href="#tutorial/4" class="shortcut">Reactive Streams</a>
     </p>
 </div>
 
@@ -114,59 +132,72 @@
     <h2>Part 1: Reactive Streams</h2>
 
     <p>
-       If we want to stream the tweets via websockets to our users we need to get them from somewhere. That place is the
-       event bus. However, we need to perform some transformations before <strong>Akka Http</strong> is able to use the
-       bus as a source. The first step is hook up an actor to the event bus and expose that actor as a <code>Publisher</code>.
-    </p>
-    <p>
-        The <a href="https://github.com/reactive-streams/reactive-streams-jvm/blob/v1.0.0/README.md#specification">Reactive Streams Specification</a> defines a Publisher as<br />
+        If we want to stream the tweets via websockets to our users we need to get them from somewhere. That place is
+        the
+        event bus. However, we need to perform some transformations before <strong>Akka Http</strong> is able to use the
+        bus as a source. The first step is hook up an actor to the event bus and expose that actor as a
+        <code>Publisher</code>.
     </p>
 
-    <blockquote><em>a provider of a potentially unbounded number of sequenced elements, publishing them according to the demand received from its Subscriber(s).</em></blockquote>
+    <p>
+        The <a href="https://github.com/reactive-streams/reactive-streams-jvm/blob/v1.0.0/README.md#specification">Reactive
+        Streams Specification</a> defines a Publisher as<br/>
+    </p>
+
+    <blockquote><em>a provider of a potentially unbounded number of sequenced elements, publishing them according to the
+        demand received from its Subscriber(s).</em></blockquote>
 
     <p>
-        Akka implements the Reactive Streams SPI and fortunately the code to turn an actor into a Publisher is pretty straightforward:
+        Akka implements the Reactive Streams SPI and fortunately the code to turn an actor into a Publisher is pretty
+        straightforward:
         we just have to extend <code>ActorPublisher</code> which exposes (among others) the <code>onNext</code> which we
-        can use to push a new tweet to our subscribers when one arrives. Only thing left is to subscribe to the event bus when the
-        actor is started. The code can be found in <a href="#code/src/main/scala/reactive/tweets/outgoing/TweetsSourceActor.scala" class="shortcut">TweetsSourceActor.scala</a>.
+        can use to push a new tweet to our subscribers when one arrives. Only thing left is to subscribe to the event
+        bus when the
+        actor is started. The code can be found in <a
+            href="#code/src/main/scala/reactive/tweets/outgoing/TweetPublisher.scala" class="shortcut">TweetPublisher.scala</a>
+        and should look like this:
     </p>
 
-    <pre><code>class TweetsSourceActor extends ActorPublisher[Tweet] {
+<pre><code>class TweetPublisher extends ActorPublisher[Tweet] {
 
-        override def preStart = {
-            context.system.eventStream.subscribe(self, classOf[Tweet])
-        }
+  override def preStart = {
+    context.system.eventStream.subscribe(self, classOf[Tweet])
+  }
 
-        override def receive = {
-            case tweet: Tweet => onNext(tweet)
-        }
+  override def receive = {
+    case tweet: Tweet => onNext(tweet)
+  }
 
-    }</code></pre>
+}</code></pre>
 
     <p>
-        Next: <a href="#tutorial/5" class="shortcut">Constructing a Flow from the Publisher</a>
+        Next: <a href="#tutorial/5" class="shortcut">Running the Flow</a>
     </p>
 </div>
 <div>
     <h2>Part 1: Running the Flow</h2>
+
     <p>
         In the previous section we described how to define an actor as a Reactive Streams Publisher. To start streaming
-        we still need to instantiate the actor and - in one go - transform it into a Source. This is done in <a href="#code/src/main/scala/reactive/tweets/outgoing/TweetLivestreams.scala" class="shortcut">TweetLivestreams.scala</a>.
+        we still need to instantiate the actor and - in one go - transform it into a Source. This is done in <a
+            href="#code/src/main/scala/reactive/tweets/outgoing/TweetFlow.scala" class="shortcut">TweetFlow.scala</a>.
 
-        <pre><code>private val tweetSource: Source[Tweet, ActorRef] = Source.actorPublisher[Tweet](TweetsSourceActor.props)</code></pre>
+    <pre><code>private val tweetSource: Source[Tweet, ActorRef] =
+        Source.actorPublisher[Tweet](TweetPublisher.props)</code></pre>
 
-        Now we've got our hands on a proper Source we can use it to construct a Flow:
+    Now we've got our hands on a proper <code>Source</code> we can use it to construct a <code>Flow</code>:
 
         <pre><code>def tweetFlow(tweetFilter: TweetFilter): Flow[Message, Message, Unit] =
             Flow.wrap(Sink.ignore, tweetSource filter tweetFilter map toMessage)(Keep.left)</code></pre>
 
-        Note: ignore the tweetFilter for now, this is just a convenience parameter to be able to construct specific streams,
-        like the stream of tweets for a specific user, or the stream of tweets that contain a specific hash tag.
+    Note: ignore the tweetFilter for now, this is just a convenience parameter to be able to construct specific streams,
+    like the stream of tweets for a specific user, or the stream of tweets that contain a specific hash tag.
     </p>
 
     <p>
         We are only interested in one way communication with our Websocket. We push new tweets to the client on their
-        arrival. Theoretically we could also receive messages over the same channel from the client. We just ignore those.
+        arrival. Theoretically we could also receive messages over the same channel from the client. We just ignore
+        those.
         So what does this look like in terms of a Flow?
     </p>
 
@@ -188,49 +219,66 @@
         while on the other hand the outgoing channel will be serviced by our transformed actor that is listening to the
         event bus:
 
-        <pre><code>Flow.wrap(Sink.ignore, tweetSource filter tweetFilter map toMessage)(Keep.left)</code></pre>
+    <pre><code>Flow.wrap(Sink.ignore, tweetSource filter tweetFilter map toMessage)(Keep.left)</code></pre>
+    </p>
+    <p>
+        Next: <a href="#tutorial/6" class="shortcut">The Websocket</a>
     </p>
 </div>
 
 <div>
-  <h2>Part 1: Websocket</h2>
-  <p>
-        So we have a nice Flow, the next step is plugging it into Akka Http.<br>
-        The most notable part is <b>handleWebsocketMessages</b>
-        <pre><code>   def tweetsOfUserSocket = (pathPrefix("users") & path(Segment)) { userName =>
-      handleWebsocketMessages(tweetFlowOfUser(userName))
+    <h2>Part 1: The Websocket</h2>
+
+    <p>
+        So we have a nice Flow, the next step is plugging it into Akka Http.<br/>
+        The most notable part is the <code>handleWebsocketMessages</code> directive, which comes out of the box with Akka Http.
+<pre><code>def tweetsOfUserSocket = (pathPrefix("users") & path(Segment)) { userName =>
+  handleWebsocketMessages(tweetFlowOfUser(userName))
+}</code></pre>
+
+    The part below describes the path at which the Websocket for this Flow can be found: <code>/ws/users/[userName]</code>.
+
+<pre><code>pathPrefix("ws") {
+  pathPrefix("tweets") {
+    get {
+      tweetsOfUserSocket
     }
-    
-    pathPrefix("ws") {
-      pathPrefix("tweets") {
-        get {
-          tweetsOfUserSocket
-        }
-      }
-    }</code></pre>
-        Now we have explained all the pieces it's time to <a href="#run/system">Run the App</a><br>
-        In the next part we will extend the application with a flow containing tweet with a certain hashtag.
-  </p>
-</div>
-<div>
-    <h2>Part 2: Your Goal</h2>
+  }
+}</code></pre>
+    Now we have explained all the pieces you can <a href="#run/system">run</a> the application and see everything in action.<br/>
+    </p>
     <p>
-         <h3>Implementing a websocket for hashtags</h3>
-         Tweets for a user a pretty cool, but having a diffirent channel for hashtags would be even more awesome!<br>
-         In this part we will, step by step, create this feature for the application. <br>
-         Each step will have an unimplemented method and some failing test to help you. <br>
-         This way we can explain some ways to test along the way.<br><br>
-         <img src="tutorial/img/ready-set-go.jpg" alt="Go!">
+    In the next part you will extend the application with a flow containing only tweets with a certain hash tag.
+    </p>
+    <p>
+        Next: <a href="#tutorial/7" class="shortcut">Building your own Flow</a>
     </p>
 </div>
 <div>
-    <h2>Part 2: Create a new source</h2>
+    <h2>Part 2: Building your own Flow</h2>
+    <h3>Implementing a Websocket for tweets with a certain hash tag</h3>
     <p>
-         <h3>We need a source of all tweets with a certain hashtag</h3>
+    It's time to get your hands dirty. Tweets for a user are nice to have, but having a different channel to only follow
+    tweets with a certain hash tag would be even nicer, don't you agree?</p>
+    <p>
+    In this second part we will create, step by step and test first, this feature for the application. Each step will
+    have a failing test and an unimplemented method to help you along the way.
     </p>
+    <img src="tutorial/img/ready-set-go.jpg" alt="Go!">
+    <p>
+        Next: <a href="#tutorial/8" class="shortcut">Creating a New Source</a>
+    </p>
+</div>
+<div>
+    <h2>Part 2: Creating a New Source</h2>
+
+    <p>We need a source of all tweets with a certain hash tag</p>
+
+
 </div>
 <div>
     <h2>Summary</h2>
+
     <p>
 
     </p>
