--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -47,51 +47,80 @@
     <!-- /.container -->
 </nav>
 
-<div class="container">
-    <div class="row ">
-        <div class="col-md-offset-2 col-md-8 col-sm-12 top-margin">
-            <form role="form" id="post-tweet">
-                <div class="form-group">
-                    <label for="user">Username:</label>
-                    <input type="text" class="form-control" id="user">
+<div class="container top-margin">
+    <div class="row">
+        <div class="col-md-2">
+            <div class="sidebar">
+                <div class="mini-submenu">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </div>
-                <div class="form-group">
-                    <label for="tweet">Tweet:</label>
-                    <input type="text" class="form-control" id="tweet">
+                <h3>Menu</h3>
+                <div class="list-group">
+                    <a href="/" class="list-group-item">
+                        <i class="fa fa-comment-o"></i> All
+                    </a>
+                    <a href="?user=joost" class="list-group-item">
+                        <i class="fa fa-comment-o"></i> Joost
+                    </a>
+                    <a href="?user=martijn" class="list-group-item">
+                        <i class="fa fa-comment-o"></i> Martijn
+                    </a>
+                    <a href="?hashtag=websockets" class="list-group-item">
+                        <i class="fa fa-search"></i> #websockets
+                    </a>
+                    <a href="?hashtag=fun" class="list-group-item">
+                        <i class="fa fa-search"></i> #fun
+                    </a>
                 </div>
-                <button id="submit" type="submit" class="btn btn-default pull-right">Tweet!</button>
-            </form>
-        </div>
-    </div>
-    <div class="row ">
-        <div class="col-md-offset-2 col-md-8 col-sm-12">
-            <div>
-                <ul class="timeline" id="tweets">
-                    <li class="time-label">
-                            <span class="bg-green">Timeline
-                            </span>
-                        <br/>
-                        <br/>
-                    </li>
-                    <li>
-                        <i class="fa fa-user bg-aqua"></i>
-
-                        <div class="timeline-item">
-                            <span class="time"><i class="fa fa-clock-o"></i>02 January</span>
-
-                            <h3 class="timeline-header no-border"><a href="#">Venenatis blandit.</a> Duis auctor
-                                hendrerit metus</h3>
-                        </div>
-                    </li>
-                    <li>
-                        <i class="fa fa-clock-o"></i>
-                    </li>
-                </ul>
             </div>
         </div>
+        <div class="col-md-10">
+            <div class="row ">
+                <div class="col-md-8 col-sm-12">
+                    <form role="form" id="post-tweet">
+                        <div class="form-group">
+                            <label for="user">Username:</label>
+                            <input type="text" class="form-control" id="user">
+                        </div>
+                        <div class="form-group">
+                            <label for="tweet">Tweet:</label>
+                            <input type="text" class="form-control" id="tweet">
+                        </div>
+                        <button id="submit" type="submit" class="btn btn-default pull-right">Tweet!</button>
+                    </form>
+                </div>
+            </div>
+            <div class="row ">
+                <div class="col-md-8 col-sm-12">
+                    <div>
+                        <ul class="timeline" id="tweets">
+                            <li class="time-label">
+                            <span class="bg-green">Timeline
+                            </span>
+                                <br/>
+                                <br/>
+                            </li>
+                            <li>
+                                <i class="fa fa-user bg-aqua"></i>
 
+                                <div class="timeline-item">
+                                    <span class="time"><i class="fa fa-clock-o"></i>02 January</span>
+
+                                    <h3 class="timeline-header no-border"><a href="#">Venenatis blandit.</a> Duis auctor
+                                        hendrerit metus</h3>
+                                </div>
+                            </li>
+                            <li>
+                                <i class="fa fa-clock-o"></i>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-
 </div>
 <!-- /.container -->
 
