Fixed menu links

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -27,18 +27,18 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="htttp://www.binarytheme.com">ORDINA </a>
+            <a class="navbar-brand" href="http://www.ordina.com/">ORDINA </a>
         </div>
         <!-- Collect the nav links for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="#">Home</a>
+                <li><a href="/">Home</a>
                 </li>
-                <li><a href="#">About</a>
+                <li><a href="/">About</a>
                 </li>
-                <li><a href="#">Services</a>
+                <li><a href="/">Services</a>
                 </li>
-                <li><a href="#">Contact</a>
+                <li><a href="/">Contact</a>
                 </li>
             </ul>
         </div>
